--- a/views/admin.pug
+++ b/views/admin.pug
@@ -54,7 +54,7 @@ html
 
             if errors.length == 0
                 ul(class="user-list")
-                    each user in data
+                    each user in data.users
                         li(class="nodecoration" onclick="findUser(this);")
                             a.list-group-item.list-group-item-action(href="#" data-toggle="modal"
                             data-target="#editModal" data-user=user) #{user.first}
