--- a/views/admin.pug
+++ b/views/admin.pug
@@ -88,7 +88,7 @@ html
                                         input#password.form-control(type='text')
                             .modal-footer
                                 button.btn.btn-primary(type='button' onclick='updateUser()') Opdater
-                                button.btn.btn-secondary(type='button' id="btnDelete") Slet
+                                button.btn.btn-secondary(type='button' id="btnDelete" onclick='deleteUser()') Slet
                                 button.btn.btn-secondary(type='button', data-dismiss='modal') Annuller
         else
             nav(class="navbar navbar-expand-lg navbar-light bg-light")
