--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,7 +17,7 @@ html
     body(style="padding-right: 30px")
         if(authenticated)
             //https://getbootstrap.com/docs/4.0/components/navbar/
-            nav(class="navbar navbar-expand-lg navbar-light bg-light" style="padding-right:0px; ")
+            nav(class="navbar navbar-expand-lg fixed-top navbar-light bg-light" style="padding-right:0px; ")
                 a(class="navbar-brand" href="/") SNYT++
                 button(class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation")
                     span(class="navbar-toggler-icon")
@@ -26,14 +26,13 @@ html
                     ul(class="navbar-nav mr-auto")
                         li(class="nav-item"): a(class="nav-link" href="/opretsnyt") Opret SNYT
                         li(class="nav-item"): a(class="nav-link" href="/kvitoversigt") Læsekvittering oversigt
-                    input(class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"
+                    input(class="form-control mr-sm-2" type="search" placeholder="Søg" aria-label="Search"
                     id="regularSearchText" style="width: 33em;")
                     button(class="btn btn-info" id="search" onClick="regularSearch();"
-                    style="margin-right: 5px;") Search
-
+                    style="margin-right: .5em;") Søg
                     form(class="form-inline my-2 my-lg-0")
                         button(type="button" class="btn btn-outline-info my-2 my-sm-0" data-toggle="modal"
-                        data-target="#advancedSearch") Flere søgemuligheder
+                        data-target="#advancedSearch" style='margin-right: 3em;') Udvidet søgning
 
                     ul(class="navbar-nav")
                         li(class="nav-item dropdown")
