--- a/views/createSnyt.pug
+++ b/views/createSnyt.pug
@@ -1,7 +1,7 @@
 extends layout.pug
 block body
     if(authenticated)
-        form(action="/opretsnyt", method="POST")
+        form(action="/opretsnyt", method="POST" enctype = "multipart/form-data")
             div(class="row")
                 div(class="col-2")
                     fieldset
@@ -28,8 +28,10 @@ block body
                                 option(value="IT") IT
                                 option(value="Klinisk Forsøg") Klinisk Forsøg
                                 option(value="Produktion") Produktion
-
-
+                        li
+                        label Billeder
+                            input(name='pic', type='file' multiple)
+                            //input.form-control(name='pic', type='file')
                         li
                             button(type="submit" class="btn btn-primary") Gem
                         br
