--- a/views/kvitoversigt.pug
+++ b/views/kvitoversigt.pug
@@ -1,7 +1,7 @@
 extends layout.pug
 block body
     if(authenticated)
-        div(class="container")
+        div(style="padding:0em 2em 0em 2em")
             input#hiddenInputForUserAmount(hidden value=users)
             table(class="table")
                 thead
