--- a/views/index.pug
+++ b/views/index.pug
@@ -26,7 +26,8 @@ block body
 
     else
         //Hvis man ikke er logget ind kommer det her:
-        div(class="col-lg-1 col-centered input")    h1 SNYT++
+        div(class="col-lg-1 col-centered input")
+            h1 SNYT++
             form(action="/", method="POST" id="mainLogin")
                 fieldset
                     p
@@ -35,6 +36,8 @@ block body
                     p
                         label Password
                         input(name="user[password]", type="password")
-                    p(class="d-flex flex-row")
-                        button(type="submit" class="btn btn-primary" form="mainLogin") Log Inda(href="/admin")
-                        button(class="btn btn-secondary" style="margin-left: 2em") Admin
+            p(class="d-flex flex-row")
+                button(type="submit" class="btn btn-primary" form="mainLogin") Log Ind
+                a(href="/admin")
+                    button(class="btn btn-secondary" style="margin-left: 2em") Admin
+
