upload flere billeder i rediger SNYT

--- a/views/editSnyt.pug
+++ b/views/editSnyt.pug
@@ -31,7 +31,7 @@ block body
                                     option(value="Produktion") Produktion
                             li
                                 label Billeder
-                                    input(name='pic', type='file' multiple)
+                                    input(name='pic', type='file' multiple accept="image/*")
                             br
                             li
                                 button(type="submit" class="btn btn-primary" data-href=data.snyt._id onclick="deletePictures(this)") OK
