--- a/views/createSnyt.pug
+++ b/views/createSnyt.pug
@@ -31,7 +31,7 @@ block body
                                     option(value="Produktion") Produktion
                             li
                                 label Billeder
-                                    input(name='pic', type='file' multiple)
+                                    input(name='pic', type='file' multiple accept="image/*")
 
                             li
                                 button(type="submit" class="btn btn-primary") Gem
